force-app/main/default/objects/MT_Account__c/MT_Account__c.object-meta.xml
<CustomObject>
    <label>日東紡マテ_取引先</label>
    <nameField>
        <label>事業所／工場名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>