force-app/main/default/objects/MT_Account__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>取引先名（略称）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>