force-app/main/default/objects/MT_Account__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>詳細内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>